loop of 5 questions with end screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@ header button {
     font-size: 16px;
     border-radius: 10px;
     font-weight: bold;
-    
 }
 
 header h3 {
@@ -37,6 +36,22 @@ main {
     text-align: center;
 }
 
-main h1 {
-    padding: 5%;
+.head-text {
+    padding-bottom: 22px;
+}
+
+.informative-text {
+    padding-bottom: 22px;
+}
+
+
+.btn {
+outline: none;
+  display: inline-block;
+  padding: 10px 15px;
+  background: purple;
+  font-size: 22px;
+  border-radius: 12px;
+  position: relative;
+  margin: 1px;
 }
