added high scores to local storage array

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,11 @@ header button {
     font-weight: bold;
 }
 
+header button a {
+    text-decoration: none;
+    color: black;
+}
+
 header h3 {
     margin: 3%;
 }
@@ -44,7 +49,6 @@ main {
     padding-bottom: 22px;
 }
 
-
 .btn {
 outline: none;
   display: inline-block;
@@ -55,3 +59,9 @@ outline: none;
   position: relative;
   margin: 1px;
 }
+
+.btn a {
+    text-decoration: none;
+    color: black;
+}
+
